#1380 Replace CSRF cookie with SameSite cookie setting (#1420)
* impl(backend): replace CSRF with SameSite cookie

Related with #1380

* impl(backend): add assertion for SameSite flag

Related with #1380

* impl(backend): fix format issue

Related with #1380

* impl(backend): add check for SameSite cookie flag

- clean up

Related with #1380